--- a/trunk/site/app.yaml
+++ b/trunk/site/app.yaml
@@ -32,3 +32,15 @@ handlers:
   script: controllers/home.py
   login: admin
 
+skip_files:
+- ^(.*/)?app\.yaml
+- ^(.*/)?app\.yml
+- ^(.*/)?index\.yaml
+- ^(.*/)?index\.yml
+- ^(.*/)?#.*#
+- ^(.*/)?.*~
+- ^(.*/)?.*\.py[co]
+- ^(.*/)?.*/RCS/.*
+- ^(.*/)?\..*
+- ^(.*/)?tags$
+
