--- a/trunk/site/app.yaml
+++ b/trunk/site/app.yaml
@@ -4,6 +4,9 @@ runtime: python
 api_version: 1
 
 handlers:
+- url: /viewer/.*
+  script: viewer.py
+
 - url: /images/(.*\.(gif|png|jpg))
   static_files: images/\1
   upload: images/(.*\.(gif|png|jpg))
