Implemented initial 'check availability' post handler for public site request

--- a/site/app.yaml
+++ b/site/app.yaml
@@ -30,6 +30,9 @@ handlers:
   script: controllers/bookinghandlers.py
   login: admin
 
+- url: /externalbookings/.*
+  script: externalrequests/externalhandlers.py
+  # login: required
 
 - url: /unload
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
