--- a/trunk/site/app.yaml
+++ b/trunk/site/app.yaml
@@ -33,6 +33,9 @@ handlers:
 - url: /externalbookings
   script: externalrequests/externalhandlers.py
 
+- url: /paymentnotify
+  script: externalrequests/paymenthandlers.py
+
 - url: /tasks/.*
   script: controllers/tasks.py
 
