--- a/trunk/site/cron.yaml
+++ b/trunk/site/cron.yaml
@@ -1,4 +1,8 @@
 cron:
-- description: clean up expired enquiries
-  url: /tasks/clearexpiredenquiries
+- description: Transition expired enquiries to expired
+  url: /tasks/expireenquiries
+  schedule: every 1 hours
+
+- description: Email Guests
+  url: /tasks/emailguests
   schedule: every 1 hours
