Sort bedrooms on venue by name

--- a/site/index.yaml
+++ b/site/index.yaml
@@ -20,6 +20,11 @@ indexes:
   - name: __key__
     direction: desc
 
+- kind: Bedroom
+  properties:
+  - name: venue
+  - name: name
+
 - kind: CodeLookup
   properties:
   - name: __key__
