--- a/trunk/site/index.yaml
+++ b/trunk/site/index.yaml
@@ -47,6 +47,12 @@ indexes:
   properties:
   - name: created
 
+- kind: CollectionTransaction
+  ancestor: yes
+  properties:
+  - name: type
+  - name: created
+
 - kind: EmailAddress
   properties:
   - name: __key__
