--- a/trunk/site/cron.yaml
+++ b/trunk/site/cron.yaml
@@ -6,3 +6,7 @@ cron:
 - description: Email Guests
   url: /tasks/emailguests
   schedule: every 1 hours
+
+- description: Create Slots
+  url: /tasks/createslots
+  schedule: every 5 minutes
