Added venue_key to slot and upadte_datastore task to add it to all slots

--- a/site/app.yaml
+++ b/site/app.yaml
@@ -38,6 +38,7 @@ handlers:
 
 - url: /tasks/.*
   script: controllers/tasks.py
+  login: admin
 
 - url: /unload
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
