--- a/trunk/site/index.yaml
+++ b/trunk/site/index.yaml
@@ -119,6 +119,14 @@ indexes:
   properties:
   - name: city
   - name: occupied
+  - name: startDate
+  - name: venueType
+  - name: venue_key
+
+- kind: Slot
+  properties:
+  - name: city
+  - name: occupied
   - name: venueType
   - name: startDate
 
