Added venue_cap to slot and used int alloaction; added random offset to allocation

--- a/site/index.yaml
+++ b/site/index.yaml
@@ -109,51 +109,14 @@ indexes:
 
 - kind: Slot
   properties:
-  - name: childFriendly
   - name: city
   - name: occupied
   - name: startDate
   - name: venueType
+  - name: venue_capacity
   - name: venue_key
-
-- kind: Slot
-  properties:
   - name: childFriendly
-  - name: city
-  - name: occupied
-  - name: venueType
-  - name: startDate
-
-- kind: Slot
-  properties:
-  - name: city
-  - name: occupied
-  - name: startDate
-  - name: venueType
-  - name: venue_key
-
-- kind: Slot
-  properties:
-  - name: city
-  - name: occupied
-  - name: venueType
-  - name: startDate
-
-- kind: Slot
-  properties:
-  - name: city
-  - name: occupied
-  - name: venueType
-  - name: startDate
-  - name: ownerReference
-
-- kind: Slot
-  properties:
-  - name: city
-  - name: occupied
-  - name: venueType
   - name: wheelchairAccess
-  - name: startDate
 
 - kind: Transition
   properties:
