Put Awaiting Agent table on bookings page

--- a/site/index.yaml
+++ b/site/index.yaml
@@ -66,6 +66,11 @@ indexes:
     direction: desc
 
 - kind: Enquiry
+  properties:
+  - name: workflowStateName
+  - name: expiryDate
+
+- kind: Enquiry
   ancestor: yes
   properties:
   - name: created
