Added venue validation report task (write to log only)

--- a/site/index.yaml
+++ b/site/index.yaml
@@ -219,6 +219,11 @@ indexes:
 - kind: Venue
   properties:
   - name: owner
+  - name: contractStartDate
+
+- kind: Venue
+  properties:
+  - name: owner
   - name: state
   - name: created
 
